[package]
name = "financas_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Aqui estava o erro: trocamos 'decimal' por 'bigdecimal'
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "bigdecimal", "tls-rustls"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] } # NOVO: Para JSON
axum = "0.7" # NOVO: O Servidor Web
tower-http = { version = "0.5", features = ["cors"] } # NOVO: Segurança para o navegador
serde_json = "1.0" # Para enviar os dados formatados para o gráfico